# economic_indicators

./: .env.example  .gitignore  README.md  vercel.json
.github/workflows/: refresh.yml
data/: manifest.json
data/indicators/: aar_carloads.json  avg_hourly_earnings.json  avg_weekly_hours_mfg.json  breakeven_5y.json  business_inventories.json  capacity_utilization.json  case_shiller_hpi.json  cass_freight.json  cfnai.json  cfnai_ma3.json  challenger_layoffs.json  ci_loans.json  claims_4wma.json  consumer_confidence.json  consumer_credit.json  continuing_claims.json  core_capex_orders.json  core_pce.json  cpi_core.json  cpi_headline.json  dallas_fed_mfg.json  debt_to_gdp.json  durable_goods_ex_transport.json  durable_goods_orders.json  dxy_index.json  eci.json  empire_state_mfg.json  existing_home_sales.json  factory_orders.json  fed_balance_sheet.json  fed_balance_to_gdp.json  fed_funds_rate.json  federal_debt_src.json  federal_receipts_src.json  federal_surplus_src.json  gdp_growth_rate.json  gdp_nominal.json  gdp_real.json  housing_permits_1f.json  housing_starts.json  (+52 more)
etl/: pyproject.toml
etl/config/: indicators.yaml  release_calendar.yaml  scrapers.yaml
etl/src/: aggregation.py  cycle_classifier.py  derived_series.py  fetch_fred.py  forecast.py  main.py  scoring.py  verdict_generator.py
etl/src/fetch_scrapers/: __init__.py  aar.py  cass.py  challenger.py  dallas_fed.py  ism.py  kc_fed.py  mba.py  nahb.py  nfib.py  richmond_fed.py
etl/state/: kc_fed_excel_url.txt
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  (+1 more)
(+28 files in other folders)
